/*
 * $Id: ChangeLog,v 1.3634 2004/11/26 17:46:20 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-26 22:57 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/source/rtl/gtapi.c
    ! fixed GPF when hb_gtSetColorStr() sets different color string
      size in different Windows

2004-11-26 18:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/source/vm/classes.c
    + added: extern HB_EXPORT USHORT hb_objGetClass( PHB_ITEM pItem )

  * xharbour/source/rtl/gtapi.c
    * once again - I do not know why it's still disabled - I made some
      mistake or someone overwrite my previous commit
      reenabled hb_gtReadKey() function - it's documented API function
      which is used by some 3-rd party libs

2004-11-26 18:40 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbexprb.c
    * casting

  * xharbour/source/rdd/dbffpt/dbffpt1.c
    ! cleaned the code for bool items in SIX memos

2004-11-26 17:31 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_tgz.sh
  * bin/hb-func.sh
    * Respect HB_WITHOUT_GTSLN environment variable.
  * make_drw.sh
    * Use gtcrs instead of gtsln by default.
  * bin/hb-mkslib.sh
    ! Don't use -bind_at_load in Darwin - it does nothing sensible and
      is unsupported by some libtool versions.

2004-11-26 13:05 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/teditor.prg
   * source/rtl/memoedit.prg
     ! Fixed compatibility with clipper when edit buffer cannot be
       edited and cursor keys are pressed (that is, make text scroll
       instead of cursor)

2004-11-25 23:58 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * tests/readhrb.prg
    ! fixed to be able to read current .hrb files.
